feature(OH2-474): Implement plugin system